--- a/public/css/basket.css
+++ b/public/css/basket.css
@@ -156,7 +156,7 @@ h4 {
 
 }
 
-.note textarea {
+.note textarea, .note input {
     background: transparent;
     border: medium none;
     box-shadow: none;
