--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,88 @@
+/* reset.css by Eric Meyer */
+html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td,
+del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
+    vertical-align: baseline;
+    font-family: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: 100%;
+    outline: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+/* remember to define focus styles! */
+:focus {
+    outline: 0;
+}
+body {
+    background: white;
+    line-height: 1;
+    color: black;
+}
+ol, ul {
+    list-style: none;
+}
+/* tables still need cellspacing="0" in the markup */
+table {
+    border-collapse: separate;
+    border-spacing: 0;
+}
+caption, th, td {
+    font-weight: normal;
+    text-align: left;
+}
+/* remove possible quote marks (") from <q> & <blockquote> */
+blockquote:before, blockquote:after, q:before, q:after {
+    content: "";
+}
+blockquote, q {
+    quotes: "" "";
+}
+/* undohtml.css */
+/* (CC) 2004 Tantek Celik. Some Rights Reserved. */
+/* http://creativecommons.org/licenses/by/2.0 */
+/* This style sheet is licensed under a Creative Commons License. */
+/* Purpose: undo some of the default styling of common (X)HTML browsers */
+
+/* link underlines tend to make hypertext less readable,
+  because underlines obscure the shapes of the lower halves of words */
+:link,:visited { text-decoration:none }
+
+/* no list-markers by default, since lists are used more often for semantics */
+ul,ol { list-style:none }
+
+/* avoid browser default inconsistent heading font-sizes */
+/* and pre/code too */
+h1,h2,h3,h4,h5,h6,pre,code { font-size:1em; }
+
+/* remove the inconsistent (among browsers) default ul,ol padding or margin */
+/* the default spacing on headings does not match nor align with
+  normal interline spacing at all, so let's get rid of it. */
+/* zero out the spacing around pre, form, body, html, p, blockquote as well */
+/* form elements are oddly inconsistent, and not quite CSS emulatable. */
+/* nonetheless strip their margin and padding as well */
+ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input
+{ margin:0; padding:0 }
+
+/* whoever thought blue linked image borders were a good idea? */
+a img,:link img,:visited img { border:none }
+
+/* de-italicize address */
+address { font-style:normal }
+
+a { outline: none !important; }
+
+h1 { font-size:2.0em; }
+h2 { font-size:1.8em; }
+h3 { font-size:1.6em; }
+h4 { font-size:1.4em; }
+h5 { font-size:1.2em; }
+
+
+
 ul {
     margin: 0;
     padding: 0;
@@ -688,7 +773,7 @@ a.print.form-3 {
 .row-highlite-2.order-type-2 {
     color: #999;
 }
-.order-type-highlite-1 {
+.order-type-highlite-1, .order-type-highlite-3 {
     color: #1eb25f;
 }
 a.edit-order {
@@ -707,8 +792,14 @@ select[name=categories_id] {
     margin: 20px;
 }
 .form-control.grid-edit-field-1 {
-    width: 46px;
-    display: inline;
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
+    width: 42px;
+    height: 23px;
+}
+table.grid th {
+    text-align: center;
 }
 table#details, table#controls {
     display: block;
@@ -724,4 +815,19 @@ table#controls {
 
 #cabinet_header {
     color: #ffffff;
+}
+.mess-12 {
+    margin: 100px 20px 0 20px;
+}
+.label-filters-subcat {
+    margin: 0 10px 0 6px;
+    color: #278880;
+}
+.label-filters-origin {
+    margin: 0 10px 0 6px;
+    color: #ad478c;
+}
+a.clone-order {
+    color: #444;
+    background: #b2ccb1 none repeat scroll 0 0;
 }
