--- a/Core/View/layouts/partial/twig_header_front.phtml
+++ b/Core/View/layouts/partial/twig_header_front.phtml
@@ -1,19 +1,4 @@
-{# /** @var \Bluz\View\Layout $this */ #}
-{#
-TODO:
-view helpers:
-- baseUrl
-- headScript
-- headStyle
-- link
-func:
-- trigger
-- module
-- controller
-- hasMessages
-- getMessages
-- json_encode
-#}
+
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
@@ -27,6 +12,7 @@ func:
     <link rel="stylesheet" href="{{ baseUrl('/public/css/font-awesome.css') }}" />
     <link rel="stylesheet" href="{{ baseUrl('/public/css/styles.css') }}" />
     <link rel="stylesheet" href="{{ baseUrl('/public/css/print.css') }}" media="print" />
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/basket.css') }}"  />
     <link rel="shortcut icon"  href="{{ baseUrl('favicon.png') }}" type="image/png" />
 
     <script src="{{ baseUrl('/public/js/require.js') }}"></script>
